--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "istrust.org",
   "version": "1.0.0",
   "scripts": {
+    "format": "prettier -w .",
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview"
@@ -13,6 +14,7 @@
     "@vitejs/plugin-vue": "^1.9.0",
     "autoprefixer": "^10.3.6",
     "postcss": "^8.3.8",
+    "prettier": "^2.4.1",
     "tailwindcss": "^2.2.16",
     "typescript": "^4.4.3",
     "vite": "^2.5.10",
