--- a/package.json
+++ b/package.json
@@ -1,23 +1,32 @@
 {
   "name": "istrust.org",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
-    "format": "prettier -w .",
-    "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
-    "serve": "vite preview"
+    "dev": "nuxt",
+    "build": "nuxt build",
+    "start": "nuxt start",
+    "generate": "nuxt generate",
+    "lint": "eslint --ext \".js,.vue\" --ignore-path .gitignore ."
   },
   "dependencies": {
-    "vue": "^3.2.13"
+    "@vue/composition-api": "^1.2.2",
+    "core-js": "^3.15.1",
+    "nuxt": "^2.15.7"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^1.9.0",
-    "autoprefixer": "^10.3.6",
-    "postcss": "^8.3.8",
-    "prettier": "^2.4.1",
-    "tailwindcss": "^2.2.16",
-    "typescript": "^4.4.3",
-    "vite": "^2.5.10",
-    "vue-tsc": "^0.3.0"
+    "@babel/eslint-parser": "^7.14.7",
+    "@nuxt/image": "^0.6.0",
+    "@nuxt/types": "^2.15.7",
+    "@nuxt/typescript-build": "^2.1.0",
+    "@nuxtjs/eslint-config-typescript": "^6.0.1",
+    "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/tailwindcss": "^4.2.0",
+    "eslint": "^7.29.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-nuxt": "^2.0.0",
+    "eslint-plugin-vue": "^7.12.1",
+    "postcss": "^8.3.5",
+    "prettier": "^2.3.2"
   }
 }
