--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint --ext \".js,.vue\" --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@nuxtjs/i18n": "^7.0.3",
     "@vue/composition-api": "^1.2.2",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7"
