--- a/promotion/teaser/package.json
+++ b/promotion/teaser/package.json
@@ -24,6 +24,11 @@
 	"devDependencies": {
 		"@types/express": "^4.17.9",
 		"@types/react": "^17.0.0",
-		"@types/web": "^0.0.46"
+		"@types/web": "^0.0.46",
+		"autoprefixer": "^10.4.0",
+		"postcss": "^8.4.5",
+		"postcss-loader": "^6.2.1",
+		"postcss-preset-env": "^7.0.2",
+		"tailwindcss": "^3.0.7"
 	}
 }
