--- a/teaser/package.json
+++ b/teaser/package.json
@@ -14,6 +14,7 @@
 		"@remotion/renderer": "^2.3.2",
 		"eslint": "^7.15.0",
 		"express": "^4.17.1",
+		"lottie-react": "^2.1.0",
 		"prettier": "^2.2.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
